data/derived/fa15/progs/unify/prog0938.ml.out
Characters 178-182:
  let (carry, res) = List.fold_left f base args in
                                      ^^^^
Error: This expression has type int but an expression was expected of type
         int list
